[project]
name = "docu-cat"
version = "0.1.0"
description = "An AI assistant that generates or updates documents from changes in a GitHub pull request"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "lu" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
