[project]
name = "docu-cat"
version = "0.1.0"
description = "An AI assistant that generates or updates documents from changes in a GitHub pull request"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "lu" }
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.0",
    "pymilvus[milvus_lite]>=2.4.0",
    "sentence-transformers>=2.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph-cli>=0.4.4",
]

[project.scripts]
docu-cat = "main:main"
rag = "rag:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "run_docu_cat_github.py", "analyzer.py", "__init__.py"]

[tool.uv]
dev-dependencies = []
